--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@ href="https://composerprogrammer.com/teaching/supercollider/sctutorial/tutorial.
 href="https://ccrma.stanford.edu/~ruviaro/texts/A_Gentle_Introduction_To_SuperCollider.pdf">https://ccrma.stanford.edu/~ruviaro/texts/A_Gentle_Introduction_To_SuperCollider.pdf</a>)</li>
 </ul>
 <dl class="incremental">
-<dt>- Extras (there are <span class="title-ref">many others
-&lt;https://supercollider.sourceforge.net/learning/&gt;_</span>):</dt>
+<dt>- Extras (there are <a
+href="https://supercollider.sourceforge.net/learning/">many
+others</a>):</dt>
 <dd>
 <ul class="incremental">
 <li>The SuperCollider Book (<a
